<resources>
    <string name="app_name">Referenda</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Referenda</string>
    <string name="nav_header_subtitle">Democracia Directa</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_delegate">Delegar Votos</string>
    <string name="menu_polls">Votaciones</string>
    <string name="menu_results">Resultados</string>
    <string name="menu_share">Compartir</string>
    <string name="menu_stats">Estadísticas</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="resultatos_fragment">Resultados ya!!</string>
</resources>
